src/objects/Latch_Application__mdt.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Application_Id__c</fullName>
        <label>Application Id</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secret__c</fullName>
        <label>Secret</label>
        <length>150</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Latch Application</label>
    <pluralLabel>Latch Applications</pluralLabel>
</CustomObject>